--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             font-weight: bold;
             font-size: 18px;
             text-align: right;
-            color: #42a5f5; /* Beautiful blue */
+            color: #c0e396;
         }
 
         .footer {
