--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Sales</title>
+    <title>AIS5G Internet Packages</title>
     <style>
-        body {
+      body {
+            padding-top: 50px; /* Adjust based on header height */
             font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
@@ -13,12 +14,18 @@
             background-color: #e8f5e9;
             padding: 20px;
             margin: 0;
-        }
+}
+
 
         h1 {
             color: #2e7d32;
             text-align: center;
             margin-bottom: 20px;
+        }
+
+        .contact-card a {
+        color: #ffd700; /* Gold color for better visibility */
+        font-weight: bold;
         }
 
         .contact-card {
@@ -44,26 +51,79 @@
             color: #c8e6c9;
         }
 
-        .contact-card p {
-            font-size: 16px;
-            margin: 5px 0;
-        }
+        .contact-card {
+    display: flex;
+    flex-direction: column;
+    align-items: left; /* Centers all content inside */
+    text-align: left;
+}
 
         .map {
-            width: 100%;
-            height: 250px;
-            border-radius: 10px;
-            border: 0;
-        }
+    width: 100%;
+    height: 250px;
+    border-radius: 10px;
+    border: 0;
+    display: block; /* Ensures it behaves as a block element */
+    margin: 0 auto; /* Centers it horizontally */
+}
 
         @media (max-width: 600px) {
             .map {
                 height: 200px;
             }
         }
+
+        /* Scrolling Header */
+        .header {
+            width: 100%;
+            background: #4CAF50;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 0;
+            text-align: center;
+            overflow: hidden;
+            white-space: nowrap;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        .scrolling-text {
+            display: inline-block;
+            animation: marquee 15s linear infinite;
+        }
+
+        .header:hover .scrolling-text {
+            animation-play-state: paused;
+        }
+
+        @keyframes marquee {
+            from { transform: translateX(100%); }
+            to { transform: translateX(-100%); }
+        }
+
+        .footer {
+            width: 100%;
+            background: #4CAF50;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 0;
+            text-align: center;
+            margin-top: 20px;
+      
+        }
     </style>
 </head>
 <body>
+    <!-- Scrolling Header -->
+<div class="header">
+    <div class="scrolling-text">
+        AIS5G Internet packages, you can choose the internet packages as you need! Based on GB, Mbps, and unlimited internet.
+    </div>
+</div>
     <h1>Contact Our Sales Team</h1>
 
     <div class="contact-card">
@@ -88,6 +148,10 @@
         <p>Phone: <a href="tel:+66821590328" style="color: #fff;">+66 82 159 0328</a></p>
         <p>Email: -</p>
         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d526.8264112847967!2d97.97942494567079!3d19.76737727540578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2smy!4v1741294407350!5m2!1sen!2smy" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <div class="footer" >
+        &copy; 2025 AIS Network | All Rights Reserved
     </div>
 
 </body>
