--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
             color: white;
         }
 
+        .break {
+    width: 100%;
+    height: 1px;
+    clear: both; /* Ensures it breaks in case of float */
+    display: block;
+}
+
+
         .package:hover {
             transform: scale(1.08);
         }
@@ -177,12 +185,14 @@
     const container = document.querySelector(".container");
     const fragment = document.createDocumentFragment();
 
-    packages.forEach((pkg, index) => {
+    packages.forEach(pkg => {
         fragment.appendChild(createPackageElement(pkg));
 
-        // Insert a line break after every package with 7 days
+        // Insert a break container after every 7-day package
         if (pkg.day === 7) {
-            fragment.appendChild(document.createElement("br"));
+            const breakDiv = document.createElement("div");
+            breakDiv.classList.add("break");
+            fragment.appendChild(breakDiv);
         }
     });
 
