--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             margin-top: 50px;
             display: flex;
             flex-wrap: wrap;
-            justify-content: left;
+            justify-content: justify;
             width: 100%;
         }
 
