--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             margin-top: 50px;
             display: flex;
             flex-wrap: wrap;
-            justify-content: justify;
+            justify-content: center;
             width: 100%;
         }
 
@@ -69,7 +69,7 @@
 
         .break {
     width: 100%;
-    height: 1px;
+    height: 20px;
     clear: both; /* Ensures it breaks in case of float */
     display: block;
 }
