--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             flex-wrap: wrap;
             justify-content: center;
             width: 100%;
+            box-shadow: 5px 5px 3px rgba( 0, 0, 0, 0.7);
         }
 
         .package {
