--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     height: 20px;
     clear: both; /* Ensures it breaks in case of float */
     display: block;
+            border: 5px, dotted, green;
 }
 
 
