--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             flex-wrap: wrap;
             justify-content: center;
             width: 100%;
-            box-shadow: 5px 5px 3px rgba( 0, 0, 0, 0.7);
-        }
+            }
 
         .package {
             background: #4CAF50;
@@ -69,16 +68,16 @@
         }
 
         .break {
-    width: 100%;
-    height: 20px;
-    clear: both; /* Ensures it breaks in case of float */
-    display: block;
-            border: 5px, dotted, green;
+            width: 100%;
+            height: 20px;
+            clear: both; /* Ensures it breaks in case of float */
+            display: block;
+            border: 1px, dashed, green;
 }
 
 
         .package:hover {
-            transform: scale(1.08);
+            transform: scale(1.5);
         }
 
         .package h2 {
