--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         }
 
         .break {
-            width: 50%;
+            width: 100%;
             height: 2px;
             clear: both; /* Ensures it breaks in case of float */
             display: block;
-            border: 2px, dashed, green;
+            border: 2px, ridge, green;
 }
 
 
