--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             height: 2px;
             clear: both; /* Ensures it breaks in case of float */
             display: block;
-            border: 2px, ridge, green;
+            border: 2px, ridge, gold;
 }
 
 
