--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         .price {
             font-size: 16px;
             font-weight: bold;
-            color: #c8e6c9;
+            color: gold;
             margin: 10px 0;
         }
 
