--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,27 @@
             margin-bottom: 20px;
         }
 
+      p {
+        width: max-content;
+        position: relative;
+        cursor: pointer;
+        }
+    p::after{
+        content: "";
+            position: absolute;
+        bottom: -5px;
+        height: 1px;
+        width: 100%;
+        left: 0;
+        background-color: #272727;
+        transition: 0.3s;
+        transition-timing-function: easy-in-out;
+        transform: scaleX(0)
+        }
+    p:hover::after
+        {
+        transform: scaleX(1)}
+
         .contact-card a {
         color: #ffd700; /* Gold color for better visibility */
         font-weight: bold;
@@ -123,6 +144,12 @@
     <div class="scrolling-text">
         AIS5G Internet packages, you can choose the internet packages as you need! Based on GB, Mbps, and unlimited internet.
     </div>
+<div>
+ <p>
+   "The blue Wi-Fi icon indicates the locations of AIS 5G Wi-Fi access points, allowing you to use the AIS 5G internet service at the nearest available spot."
+ </p>
+</div>   
+    
 </div>
     <h1>Contact Our Sales Team</h1>
 
@@ -131,7 +158,7 @@
         <h4>ဒေါ်ပီရွှေဆိုင်၊ မြို့မဈေးကြီး</h4>
         <p>Phone: <a href="tel:+66821590328" style="color: #fff;">+66 82 159 0328</a></p>
         <p>Email: -</p>
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d680.2459245686312!2d97.97967501529206!3d19.76773215393707!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30d017b1f9d25ec9%3A0x472ce3b01a14832d!2sMarket%20Homein!5e1!3m2!1sen!2smy!4v1741294070831!5m2!1sen!2smy" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1pB4Ufg52vS7_B9u0EWrtf-jUdJQe2HQ&ehbc=2E312F" width="640" height="480"></iframe>
     </div>
 
     <div class="contact-card">
@@ -139,7 +166,7 @@
         <h4>အန်တီငယ် ထမင်းဆိုင်၊ မြို့မဈေးကြီးအနီး</h4>
         <p>Phone: <a href="tel:+66821590328" style="color: #fff;">+66 82 159 0328</a></p>
         <p>Email: -</p>
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d510.19671564503034!2d97.97956313710257!3d19.768042095914637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2smy!4v1741294215454!5m2!1sen!2smy" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1pB4Ufg52vS7_B9u0EWrtf-jUdJQe2HQ&ehbc=2E312F" width="640" height="480"></iframe>
     </div>
 
     <div class="contact-card">
@@ -147,7 +174,7 @@
         <h4>နောင့်ဖွေး သင်္ဘောသီးထောင်းဆိုင်၊ မြို့မဈေးကြီးအနီး</h4>
         <p>Phone: <a href="tel:+66821590328" style="color: #fff;">+66 82 159 0328</a></p>
         <p>Email: -</p>
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d526.8264112847967!2d97.97942494567079!3d19.76737727540578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2smy!4v1741294407350!5m2!1sen!2smy" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1pB4Ufg52vS7_B9u0EWrtf-jUdJQe2HQ&ehbc=2E312F" width="640" height="480"></iframe>
     </div>
 
     <div class="footer" >
