--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIS5G Internet Packages</title>
     <style>
-      body {
-            padding-top: 50px;
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background: #e8f5e9);
-            padding: 20px;
-            margin: 0;
-        }
+    body {
+    padding-top: 100px; /* Increased space below the fixed header */
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #e8f5e9;
+    padding: 20px;
+    margin: 0;
+}
+
+
 
         h1 {
             color: #2e7d32;
@@ -24,7 +26,19 @@
 
         
         .contact-card {
-            background: #46ae49;
+    background: #46ae49;
+    color: #f1f8e9;
+    padding: 20px;
+    margin: 50px 15px; /* Increased space between the header and the first contact card */
+    width: 90%;
+    max-width: 600px;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(50, 113, 75, 0.3);
+    text-align: justify;
+}
+
+.contact-card2 {
+                background: #46ae49;
             color: #f1f8e9;
             padding: 20px;
             margin: 15px;
@@ -34,7 +48,7 @@
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(50, 113, 75, 0.3);
             text-align: justify;
-        }
+      }
 
         .map {
             width: 100%;
@@ -107,11 +121,11 @@
 
     <h2>Contact Our Sales Team</h2>
 
-    <div class="contact-card">
+    <div class="contact-card2">
             <strong>ဗေတီး</strong> - ဒေါ်ပီရွှေဆိုင်၊ မြို့မဈေးကြီး | Phone: <a href="tel:+66821590328">+66 82 159 0328</a></div>
-    <div class="contact-card">
+    <div class="contact-card2">
             <strong>အန်တီငယ်</strong> - အန်တီငယ် ထမင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+66821590328">+66 82 159 0328</a></div>
-    <div class="contact-card">
+    <div class="contact-card2">
             <strong>Nang Phwe</strong> - နောင့်ဖွေး သင်္ဘောသီးထောင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+66821590328">+66 82 159 0328</a></div>
 
     <div class="footer">
