--- a/contact.html
+++ b/contact.html
@@ -121,12 +121,12 @@
 
     <h2>Contact Our Sales Team</h2>
 
+        <div class="contact-card2">
+            <strong>အန်တီငယ်</strong> - အန်တီငယ် ထမင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+95 9428314048">+959428314048</a></div>
     <div class="contact-card2">
-            <strong>ဗေတီး</strong> - ဒေါ်ပီရွှေဆိုင်၊ မြို့မဈေးကြီး | Phone: <a href="tel:+66821590328">+66 82 159 0328</a></div>
+            <a href="https://www.google.com/maps/dir//19.7680713,97.980184/@19.7681454,97.8977908,29962m/data=!3m1!1e3?entry=ttu&g_ep=EgoyMDI1MDMxNi4wIKXMDSoASAFQAw%3D%3D"><strong>ဗေတီး</strong> - ဒေါ်ပီရွှေဆိုင်၊ မြို့မဈေးကြီး | </a> Phone: <a href="tel:+959448068038">+959448068038</a></div>
     <div class="contact-card2">
-            <strong>အန်တီငယ်</strong> - အန်တီငယ် ထမင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+66821590328">+66 82 159 0328</a></div>
-    <div class="contact-card2">
-            <strong>Nang Phwe</strong> - နောင့်ဖွေး သင်္ဘောသီးထောင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+66821590328">+66 82 159 0328</a></div>
+            <strong>Nang Phwe</strong> - နောင့်ဖွေး သင်္ဘောသီးထောင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+959424912985">+959424912985</a></div>
 
     <div class="footer">
         &copy; 2025 AIS Network | All Rights Reserved
