--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         }
 
         
-        .contact-card {
+    .contact-card {
     background: #46ae49;
     color: #f1f8e9;
     padding: 20px;
@@ -38,7 +38,43 @@
 }
 
 .contact-card2 {
-                background: #46ae49;
+            background: #46ae49;
+            color: #f1f8e9;
+            padding: 20px;
+            margin: 15px;
+            margin-top: 20px;
+            width: 90%;
+            max-width: 600px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(50, 113, 75, 0.3);
+            text-align: justify;
+      }
+        .contact-card2:is(hover, :active) {
+            background: #258728;
+            color: #f1f8e9;
+            padding: 20px;
+            margin: 15px;
+            margin-top: 20px;
+            width: 90%;
+            max-width: 600px;
+            border-radius: 70px;
+            box-shadow: 0 4px 10px rgba(50, 113, 75, 0.3);
+            text-align: justify;
+      }
+        .contact-card3 {
+            background: #46ae49;
+            color: #f1f8e9;
+            padding: 20px;
+            margin: 15px;
+            margin-top: 20px;
+            width: 90%;
+            max-width: 600px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(50, 113, 75, 0.3);
+            text-align: justify;
+      }
+        .contact-card4 {
+            background: #46ae49;
             color: #f1f8e9;
             padding: 20px;
             margin: 15px;
@@ -123,9 +159,9 @@
 
         <div class="contact-card2">
             <strong>အန်တီငယ်</strong> - အန်တီငယ် ထမင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+95 9428314048">+959428314048</a></div>
-    <div class="contact-card2">
-            <a href="https://www.google.com/maps/dir//19.7680713,97.980184/@19.7681454,97.8977908,29962m/data=!3m1!1e3?entry=ttu&g_ep=EgoyMDI1MDMxNi4wIKXMDSoASAFQAw%3D%3D"><strong>ဗေတီး</strong> - ဒေါ်ပီရွှေဆိုင်၊ မြို့မဈေးကြီး | </a> Phone: <a href="tel:+959448068038">+959448068038</a></div>
-    <div class="contact-card2">
+    <div class="contact-card3">
+            <strong>ဗေတီး</strong> - ဒေါ်ပီရွှေဆိုင်၊ မြို့မဈေးကြီး | Phone: <a href="tel:+959448068038">+959448068038</a></div>
+    <div class="contact-card4">
             <strong>Nang Phwe</strong> - နောင့်ဖွေး သင်္ဘောသီးထောင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+959424912985">+959424912985</a></div>
 
     <div class="footer">
