--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,18 @@
             box-shadow: 0 4px 10px rgba(50, 113, 75, 0.3);
             text-align: justify;
       }
+        .contact-card3:is(hover, :active) {
+            background: #258728;
+            color: #f1f8e9;
+            padding: 20px;
+            margin: 15px;
+            margin-top: 20px;
+            width: 90%;
+            max-width: 600px;
+            border-radius: 70px;
+            box-shadow: 0 4px 10px rgba(50, 113, 75, 0.3);
+            text-align: justify;
+      }
         .contact-card4 {
             background: #46ae49;
             color: #f1f8e9;
@@ -82,6 +94,18 @@
             width: 90%;
             max-width: 600px;
             border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(50, 113, 75, 0.3);
+            text-align: justify;
+      }
+        .contact-card4:is(hover, :active) {
+            background: #258728;
+            color: #f1f8e9;
+            padding: 20px;
+            margin: 15px;
+            margin-top: 20px;
+            width: 90%;
+            max-width: 600px;
+            border-radius: 70px;
             box-shadow: 0 4px 10px rgba(50, 113, 75, 0.3);
             text-align: justify;
       }
