--- a/contact.html
+++ b/contact.html
@@ -174,19 +174,21 @@
 
     
     <div class="contact-card">
-            <p>"The blue Wi-Fi icon indicates the locations of AIS5G Wi-Fi access points, 
-                allowing you to use the AIS5G internet service at the nearest available spot."</p>
+            <p>"The blue Wi-Fi icon <i class="fa-solid fa-wifi"></i> indicates the locations of AIS5G Wi-Fi access points, 
+                allowing you to use the AIS5G internet service at the nearest available spot."</p><br>
+            <p>"The green currency icon <i class='fa-solid fa-wifi'></i> indicates locations where AIS5G Wi-Fi top-up package Vouchers are available for purchase(one-stop shops)."</p>
+        <br>
         <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1pB4Ufg52vS7_B9u0EWrtf-jUdJQe2HQ&ehbc=2E312F"></iframe>
     </div>
 
     <h2>Contact Our Sales Team</h2>
 
         <div class="contact-card2">
-            <strong>အန်တီငယ်</strong> - အန်တီငယ် ထမင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+95 9428314048">+959428314048</a></div>
+            <strong>အန်တီငယ်</strong> <br> အန်တီငယ် ထမင်းဆိုင်၊ မြို့မဈေးကြီးအနီး <br> Phone: <a href="tel:+95 9428314048">+959428314048</a></div>
     <div class="contact-card3">
-            <strong>ဗေတီး</strong> - ဒေါ်ပီရွှေဆိုင်၊ မြို့မဈေးကြီး | Phone: <a href="tel:+959448068038">+959448068038</a></div>
+            <strong>ဗေတီး</strong> <br> ဒေါ်ပီရွှေဆိုင်၊ မြို့မဈေးကြီး <br> Phone: <a href="tel:+959448068038">+959448068038</a></div>
     <div class="contact-card4">
-            <strong>Nang Phwe</strong> - နောင့်ဖွေး သင်္ဘောသီးထောင်းဆိုင်၊ မြို့မဈေးကြီးအနီး | Phone: <a href="tel:+959424912985">+959424912985</a></div>
+            <strong>Nang Phwe</strong> <br> နောင့်ဖွေး သင်္ဘောသီးထောင်းဆိုင်၊ မြို့မဈေးကြီးအနီး <br> Phone: <a href="tel:+959424912985">+959424912985</a></div>
 
     <div class="footer">
         &copy; 2025 AIS Network | All Rights Reserved
