--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIS5G Internet Packages</title>
     <style>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     body {
     padding-top: 100px; /* Increased space below the fixed header */
     font-family: Arial, sans-serif;
@@ -14,9 +15,14 @@
     background: #e8f5e9;
     padding: 20px;
     margin: 0;
-}
-
-
+    }
+    
+        .fa-wifi {
+            font-size: 14px;
+            border-radius: 100px;
+            border-color: blue;
+        }
+        fa-wifi
 
         h1 {
             color: #2e7d32;
@@ -176,7 +182,7 @@
     <div class="contact-card">
             <p>"The blue Wi-Fi icon <i class="fa-solid fa-wifi"></i> indicates the locations of AIS5G Wi-Fi access points, 
                 allowing you to use the AIS5G internet service at the nearest available spot."</p><br>
-            <p>"The green currency icon <i class='fa-solid fa-wifi'></i> indicates locations where AIS5G Wi-Fi top-up package Vouchers are available for purchase(one-stop shops)."</p>
+            <p>"The green currency icon <i class="fa-sharp-duotone fa-solid fa-dollar-sign" style="--fa-primary-color: #26bc24; --fa-secondary-color: #34b431;"></i> indicates locations where AIS5G Wi-Fi top-up package Vouchers are available for purchase(one-stop shops)."</p>
         <br>
         <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1pB4Ufg52vS7_B9u0EWrtf-jUdJQe2HQ&ehbc=2E312F"></iframe>
     </div>
