--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
     <strong>$${pkg.price_usd}</strong>
     <div class="currency-line">
         <span class="currency" title="Chinese Yuan">
-            <img src="icons/yuan.png" alt="Yuan"> ¥${pkg.price_yuan}
+            <img src="icons/yuan.png" alt="Yuan"> ${pkg.price_yuan}
         </span>
         <span class="currency" title="Thai Baht">
-            <img src="icons/baht.png" alt="Baht"> ${pkg.price_baht}฿
+            <img src="icons/baht.png" alt="Baht"> ${pkg.price_baht}
         </span>
         <span class="currency" title="Myanmar Kyat">
-            <img src="icons/mmk.png" alt="MMK"> Ks${pkg.price_mmk}
+            <img src="icons/mmk.png" alt="MMK"> ${pkg.price_mmk}
         </span>
     </div>
 </p>
