--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,10 @@
     margin: 0;
     }
     
-        .fa-wifi {
-            font-size: 14px;
-            border-radius: 100px;
-            border-color: blue;
-        }
-        fa-wifi
+    .p img {
+            width: 16px;
+            height: 16px;
+        }    
 
         h1 {
             color: #2e7d32;
@@ -180,9 +178,9 @@
 
     
     <div class="contact-card">
-            <p>"The blue Wi-Fi icon <i class="fa-solid fa-wifi"></i> indicates the locations of AIS5G Wi-Fi access points, 
+            <p>"The blue Wi-Fi icon <img src="icons/wifi.png" alt="WiFi"> indicates the locations of AIS5G Wi-Fi access points, 
                 allowing you to use the AIS5G internet service at the nearest available spot."</p><br>
-            <p>"The green currency icon <i class="fa-sharp-duotone fa-solid fa-dollar-sign" style="--fa-primary-color: #26bc24; --fa-secondary-color: #34b431;"></i> indicates locations where AIS5G Wi-Fi top-up package Vouchers are available for purchase(one-stop shops)."</p>
+            <p>"The green currency icon <img src="icons/dollarsign.png" alt="Dollar Sign"> indicates locations where AIS5G Wi-Fi top-up package Vouchers are available for purchase(one-stop shops)."</p>
         <br>
         <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1pB4Ufg52vS7_B9u0EWrtf-jUdJQe2HQ&ehbc=2E312F"></iframe>
     </div>
